--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20060221
+ - (dtucker) [openbsd-compat/openssl-compat.h] Prevent warning about
+   redefinition of SSLeay_add_all_algorithms.
+
 20060220
  - (dtucker) [INSTALL configure.ac openbsd-compat/openssl-compat.{c,h}]
    Add optional enabling of OpenSSL's (hardware) Engine support, via
