--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006022
+ - (dtucker) [openbsd-compat/openssl-compat.{c,h}] Minor tidy up: only
+   compile in compat code if required.
+
 20060221
  - (dtucker) [openbsd-compat/openssl-compat.h] Prevent warning about
    redefinition of SSLeay_add_all_algorithms.
