--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,12 @@
-2006023
+20060226
+ - (dtucker) [configure.ac] Bug #1156: QNX apparently needs SSHD_ACQUIRES_CTTY
+   patch from kraai at ftbfs.org.
+
+20060223
  - (dtucker) [sshd_config sshd_config.5] Update UsePAM to reflect current
    reality.  Pointed out by tryponraj at gmail.com.
 
-2006022
+20060222
  - (dtucker) [openbsd-compat/openssl-compat.{c,h}] Minor tidy up: only
    compile in compat code if required.
 
