--- a/ChangeLog
+++ b/ChangeLog
@@ -181,6 +181,7 @@
    - jmc@cvs.openbsd.org 2006/02/25 12:26:17
      [ssh_config.5]
      document the possible values for KbdInteractiveDevices;
+     help/ok dtucker
 
 20060313
  - (dtucker) [configure.ac] Bug #1171: Don't use printf("%lld", longlong)
