--- a/ChangeLog
+++ b/ChangeLog
@@ -247,6 +247,7 @@
    [openbsd-compat/sha2.c] First stab at portability glue for SHA256
    KEX support, should work with libc SHA256 support or OpenSSL
    EVP_sha256 if present
+ - (djm) [includes.h] Restore accidentally dropped netinet/in.h
 
 20060313
  - (dtucker) [configure.ac] Bug #1171: Don't use printf("%lld", longlong)
