--- a/ChangeLog
+++ b/ChangeLog
@@ -248,6 +248,7 @@
    KEX support, should work with libc SHA256 support or OpenSSL
    EVP_sha256 if present
  - (djm) [includes.h] Restore accidentally dropped netinet/in.h
+ - (djm) [Makefile.in openbsd-compat/Makefile.in] Add added files
 
 20060313
  - (dtucker) [configure.ac] Bug #1171: Don't use printf("%lld", longlong)
