--- a/ChangeLog
+++ b/ChangeLog
@@ -249,6 +249,7 @@
    EVP_sha256 if present
  - (djm) [includes.h] Restore accidentally dropped netinet/in.h
  - (djm) [Makefile.in openbsd-compat/Makefile.in] Add added files
+ - (djm) [md-sha256.c configure.ac] md-sha256.c needs sha2.h if present
 
 20060313
  - (dtucker) [configure.ac] Bug #1171: Don't use printf("%lld", longlong)
