--- a/ChangeLog
+++ b/ChangeLog
@@ -250,6 +250,7 @@
  - (djm) [includes.h] Restore accidentally dropped netinet/in.h
  - (djm) [Makefile.in openbsd-compat/Makefile.in] Add added files
  - (djm) [md-sha256.c configure.ac] md-sha256.c needs sha2.h if present
+ - (djm) [regress/.cvsignore] Ignore Makefile here
 
 20060313
  - (dtucker) [configure.ac] Bug #1171: Don't use printf("%lld", longlong)
