--- a/ChangeLog
+++ b/ChangeLog
@@ -251,6 +251,7 @@
  - (djm) [Makefile.in openbsd-compat/Makefile.in] Add added files
  - (djm) [md-sha256.c configure.ac] md-sha256.c needs sha2.h if present
  - (djm) [regress/.cvsignore] Ignore Makefile here
+ - (djm) [loginrec.c] Need stat.h
 
 20060313
  - (dtucker) [configure.ac] Bug #1171: Don't use printf("%lld", longlong)
