--- a/ChangeLog
+++ b/ChangeLog
@@ -252,6 +252,8 @@
  - (djm) [md-sha256.c configure.ac] md-sha256.c needs sha2.h if present
  - (djm) [regress/.cvsignore] Ignore Makefile here
  - (djm) [loginrec.c] Need stat.h
+ - (djm) [openbsd-compat/sha2.h] Avoid include macro clash with
+   system sha2.h
 
 20060313
  - (dtucker) [configure.ac] Bug #1171: Don't use printf("%lld", longlong)
