- (djm) [ssh-agent.c] Restore dropped stat.h

--- a/ChangeLog
+++ b/ChangeLog
@@ -255,6 +255,7 @@
  - (djm) [openbsd-compat/sha2.h] Avoid include macro clash with
    system sha2.h
  - (djm) [ssh-rand-helper.c] Needs a bunch of headers
+ - (djm) [ssh-agent.c] Restore dropped stat.h
 
 20060313
  - (dtucker) [configure.ac] Bug #1171: Don't use printf("%lld", longlong)
