--- a/ChangeLog
+++ b/ChangeLog
@@ -256,6 +256,8 @@
    system sha2.h
  - (djm) [ssh-rand-helper.c] Needs a bunch of headers
  - (djm) [ssh-agent.c] Restore dropped stat.h
+ - (djm) [openbsd-compat/sha2.h openbsd-compat/sha2.c] Comment out 
+   SHA384, which we don't need and doesn't compile without tweaks
 
 20060313
  - (dtucker) [configure.ac] Bug #1171: Don't use printf("%lld", longlong)
