--- a/ChangeLog
+++ b/ChangeLog
@@ -267,6 +267,7 @@
  - (tim) [includes.h] put sys/stat.h back in to quiet some "macro redefined:"
  - (tim) [openssh/sshpty.c openssh/openbsd-compat/port-tun.c] put in some
    includes removed from includes.h
+ - (dtucker) [configure.ac] Fix glob test conversion to AC_TRY_COMPILE
 
 20060313
  - (dtucker) [configure.ac] Bug #1171: Don't use printf("%lld", longlong)
