--- a/ChangeLog
+++ b/ChangeLog
@@ -268,6 +268,7 @@
  - (tim) [openssh/sshpty.c openssh/openbsd-compat/port-tun.c] put in some
    includes removed from includes.h
  - (dtucker) [configure.ac] Fix glob test conversion to AC_TRY_COMPILE
+ - (djm) [includes.h] Put back paths.h, it is needed in defines.h
 
 20060313
  - (dtucker) [configure.ac] Bug #1171: Don't use printf("%lld", longlong)
