--- a/ChangeLog
+++ b/ChangeLog
@@ -271,6 +271,7 @@
  - (djm) [includes.h] Put back paths.h, it is needed in defines.h
  - (dtucker) [openbsd-compat/openbsd-compat.h] AIX (at least) needs
    sys/ioctl.h for struct winsize.
+ - (dtucker) [configure.ac] login_cap.h requires sys/types.h on NetBSD.
 
 20060313
  - (dtucker) [configure.ac] Bug #1171: Don't use printf("%lld", longlong)
