--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
    /usr/include/crypto.  Hint from djm@.
  - (tim) [kex.c myproposal.h md-sha256.c openbsd-compat/sha2.c,h]
    Disable sha256 when openssl < 0.9.7. Patch from djm@.
+ - (djm) [kex.c] Slightly more clean deactivation of dhgex-sha256 on old
+   OpenSSL; ok tim
 
 20060315
  - (djm) OpenBSD CVS Sync:
