- (djm) [auth-pam.c] Fix memleak in error path, from Coverity via   elad AT NetBSD.org

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20060318
+- (djm) [auth-pam.c] Fix memleak in error path, from Coverity via
+  elad AT NetBSD.org
+
 20060316
  - (dtucker) [entropy.c] Add headers for WIFEXITED and friends.
  - (dtucker) [configure.ac md-sha256.c] NetBSD has sha2.h in
