--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 20060318
-- (djm) [auth-pam.c] Fix memleak in error path, from Coverity via
-  elad AT NetBSD.org
+ - (djm) [auth-pam.c] Fix memleak in error path, from Coverity via
+   elad AT NetBSD.org
+ - (dtucker) [openbsd-compat/bsd-snprintf.c] Bug #1173: make fmtint() take
+   a LLONG rather than a long.  Fixes scp'ing of large files on platforms
+   with missing/broken snprintfs.  Patch from e.borovac at bom.gov.au.
 
 20060316
  - (dtucker) [entropy.c] Add headers for WIFEXITED and friends.
