--- a/ChangeLog
+++ b/ChangeLog
@@ -75,7 +75,8 @@
      [ssh-rsa.c]
      in a switch (), break after return or goto is stupid
    - deraadt@cvs.openbsd.org 2006/03/20 18:14:02
-     [channels.c clientloop.c monitor_wrap.c monitor_wrap.h serverloop.c ssh.c sshpty.c sshpty.h]
+     [channels.c clientloop.c monitor_wrap.c monitor_wrap.h serverloop.c]
+     [ssh.c sshpty.c sshpty.h]
      sprinkle u_int throughout pty subsystem, ok markus
 
 20060325
