--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20060418
+ - (djm) Reorder IP options check so that it isn't broken by 
+   mapped addresses; bz #1179 reported by markw wtech-llc.com;
+   ok dtucker@
+
 20060331
  - OpenBSD CVS Sync
    - deraadt@cvs.openbsd.org 2006/03/27 01:21:18
