--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
    _res, prevents problems on some platforms that have _res as a global but
    don't have getrrsetbyname(), eg IRIX 5.3.  Found and tested by
    georg.schwarz at freenet.de, ok djm@.
+ - (dtucker) [defines.h] Find a value for IOV_MAX or use a conservative
+   default.  Patch originally from tim@, ok djm
 
 20050506
  - (dtucker) OpenBSD CVS Syn
