--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
    georg.schwarz at freenet.de, ok djm@.
  - (dtucker) [defines.h] Find a value for IOV_MAX or use a conservative
    default.  Patch originally from tim@, ok djm
+ - (dtucker) [auth-pam.c] Bug #1188: pass result of do_pam_account back and
+   do not allow kbdint again after the PAM account check fails.  ok djm@
 
 20050506
  - (dtucker) OpenBSD CVS Syn
