--- a/ChangeLog
+++ b/ChangeLog
@@ -9,7 +9,7 @@
    do not allow kbdint again after the PAM account check fails.  ok djm@
 
 20050506
- - (dtucker) OpenBSD CVS Syn
+ - (dtucker) OpenBSD CVS Sync
    - dtucker@cvs.openbsd.org 2006/04/25 08:02:27
      [authfile.c authfile.h sshconnect2.c ssh.c sshconnect1.c]
      Prevent ssh from trying to open private keys with bad permissions more than
