--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 20060613
+ - (djm) [getput.h] This file has been replaced by functions in misc.c
  - OpenBSD CVS Sync
    - djm@cvs.openbsd.org 2006/05/08 10:49:48
      [sshconnect2.c]
