- (dtucker) [configure.ac] Bug #1193: Define PASSWD_NEEDS_USERNAME on Solaris.    Works around limitation in Solaris' passwd program for changing passwords    where the username is longer than 8 characters.  ok djm@

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20060624
+ - (dtucker) [configure.ac] Bug #1193: Define PASSWD_NEEDS_USERNAME on Solaris.
+   Works around limitation in Solaris' passwd program for changing passwords
+   where the username is longer than 8 characters.  ok djm@
+
 20060623
  - (dtucker) [README.platform configure.ac openbsd-compat/port-tun.c] Add
    tunnel support for Mac OS X/Darwin via a third-party tun driver.  Patch
