- (dtucker) [channels.c serverloop.c] Apply the bug #1102 workaround to ptys    only, otherwise sshd can hang exiting non-interactive sessions.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20060625
+ - (dtucker) [channels.c serverloop.c] Apply the bug #1102 workaround to ptys
+   only, otherwise sshd can hang exiting non-interactive sessions.
+
 20060624
  - (dtucker) [configure.ac] Bug #1193: Define PASSWD_NEEDS_USERNAME on Solaris.
    Works around limitation in Solaris' passwd program for changing passwords
