--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20060630
+ - (dtucker) [openbsd-compat/openbsd-compat.h] SNPRINTF_CONST for snprintf
+   declaration too.  Patch from russ at sludge.net.
+
 20060627
  - (dtucker) [configure.ac] Bug #1203: Add missing '[', which causes problems
    with autoconf 2.60.  Patch from vapier at gentoo.org.
