--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
  - (dtucker) [configure.ac] Try AIX blibpath test in different order when
    compiling with gcc.  gcc 4.1.x will accept (but ignore) -b flags so
    configure would not select the correct libpath linker flags.
+ - (dtucker) [INSTALL] A bit more info on autoconf.
 
 20060705
  - (dtucker) [ssh-rand-helper.c] Don't exit if mkdir fails because the
