--- a/INSTALL
+++ b/INSTALL
@@ -69,7 +69,8 @@ http://sourceforge.net/projects/libedit/
 
 Autoconf:
 
-If you modify configure.ac then you will need autoconf-2.59 to rebuild
+If you modify configure.ac or configure doesn't exist (eg if you checked
+the code out of CVS yourself) then you will need autoconf-2.59 to rebuild
 the automatically generated files by running "autoreconf".
 
 http://www.gnu.org/software/autoconf/
