--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20060710
+ - (dtucker) [INSTALL] New autoconf version: 2.60.
+
 20060706
  - (dtucker) [configure.ac] Try AIX blibpath test in different order when
    compiling with gcc.  gcc 4.1.x will accept (but ignore) -b flags so
