--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20060711
+ - (dtucker) [configure.ac ssh-keygen.c openbsd-compat/bsd-openpty.c
+   openbsd-compat/daemon.c] Add includes needed by open(2).  Conditionally
+   include paths.h.  Fixes build error on Solaris.
+
 20060710
  - (dtucker) [INSTALL] New autoconf version: 2.60.
  - OpenBSD CVS Sync
