--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20060712
+ - (dtucker) [configure.ac defines.h] Only define SHUT_RD (and friends) and O_NONBLOCK
+   if they're really needed.  Fixes build errors on HP-UX, old Linuxes and probably
+   more.
+
 20060711
  - (dtucker) [configure.ac ssh-keygen.c openbsd-compat/bsd-openpty.c
    openbsd-compat/daemon.c] Add includes needed by open(2).  Conditionally
