- (dtucker) [openbsd-compat/port-tun.c] OpenBSD needs <netinet/in.h> before    <netinet/ip.h>.

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
    Linuxes and probably more.
  - (dtucker) [configure.ac] OpenBSD needs <sys/types.h> before <sys/socket.h>
    for SHUT_RD.
+ - (dtucker) [openbsd-compat/port-tun.c] OpenBSD needs <netinet/in.h> before
+   <netinet/ip.h>.
 
 20060711
  - (dtucker) [configure.ac ssh-keygen.c openbsd-compat/bsd-openpty.c
