--- a/ChangeLog
+++ b/ChangeLog
@@ -58,6 +58,7 @@
  - (dtucker) [loginrec.c openbsd-compat/xmmap.c openbsd-compat/bindresvport.c
    openbsd-compat/glob.c openbsd-compat/mktemp.c openbsd-compat/port-tun.c
    openbsd-compat/readpassphrase.c openbsd-compat/strtonum.c] Include <errno.h>.
+ - (dtucker) [openbsd-compat/setproctitle.c] Include stdarg.h.
 
 20060711
  - (dtucker) [configure.ac ssh-keygen.c openbsd-compat/bsd-openpty.c
