--- a/ChangeLog
+++ b/ChangeLog
@@ -59,6 +59,7 @@
    openbsd-compat/glob.c openbsd-compat/mktemp.c openbsd-compat/port-tun.c
    openbsd-compat/readpassphrase.c openbsd-compat/strtonum.c] Include <errno.h>.
  - (dtucker) [openbsd-compat/setproctitle.c] Include stdarg.h.
+ - (dtucker) [ssh-keyscan.c ssh-rand-helper.c] More errno.h here too.
 
 20060711
  - (dtucker) [configure.ac ssh-keygen.c openbsd-compat/bsd-openpty.c
