--- a/ChangeLog
+++ b/ChangeLog
@@ -60,6 +60,7 @@
    openbsd-compat/readpassphrase.c openbsd-compat/strtonum.c] Include <errno.h>.
  - (dtucker) [openbsd-compat/setproctitle.c] Include stdarg.h.
  - (dtucker) [ssh-keyscan.c ssh-rand-helper.c] More errno.h here too.
+ - (dtucker) [openbsd-compat/openbsd-compat.h] v*printf needs stdarg.h.
 
 20060711
  - (dtucker) [configure.ac ssh-keygen.c openbsd-compat/bsd-openpty.c
