--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20060713
+ - (dtucker) [auth-krb5.c auth-pam.c] Still more errno.h
+
 20060712
  - (dtucker) [configure.ac defines.h] Only define SHUT_RD (and friends) and
    O_NONBLOCK if they're really needed.  Fixes build errors on HP-UX, old
@@ -63,7 +66,6 @@
  - (dtucker) [openbsd-compat/openbsd-compat.h] v*printf needs stdarg.h.
  - (dtucker) [openbsd-compat/bsd-asprintf.c openbsd-compat/port-aix.c
    openbsd-compat/rresvport.c] More errno.h.
-
 
 20060711
  - (dtucker) [configure.ac ssh-keygen.c openbsd-compat/bsd-openpty.c
