--- a/ChangeLog
+++ b/ChangeLog
@@ -6,7 +6,8 @@
       - s/The the/The/
       - kill a bad comma
    - stevesk@cvs.openbsd.org 2006/07/12 22:28:52
-     [auth-options.c canohost.c channels.c includes.h readconf.c servconf.c ssh-keyscan.c ssh.c sshconnect.c sshd.c]
+     [auth-options.c canohost.c channels.c includes.h readconf.c]
+     [servconf.c ssh-keyscan.c ssh.c sshconnect.c sshd.c]
      move #include <netdb.h> out of includes.h; ok djm@
 
 20060713
