--- a/ChangeLog
+++ b/ChangeLog
@@ -116,6 +116,9 @@
    Move get_arg_max() into the ifdef HAVE_GLOB block so that it compiles
    on OpenBSD (or other platforms with a decent glob implementation) with
    -Werror
+ - (djm) [uuencode.c]
+   Add resolv.h, is it contains the prototypes for __b64_ntop/__b64_pton on
+   some platforms
 
 20060713
  - (dtucker) [auth-krb5.c auth-pam.c] Still more errno.h
