--- a/ChangeLog
+++ b/ChangeLog
@@ -119,7 +119,10 @@
  - (djm) [uuencode.c]
    Add resolv.h, is it contains the prototypes for __b64_ntop/__b64_pton on
    some platforms
-
+ - (djm) [session.c]
+   fix compile error with -Werror -Wall: 'path' is only used in
+   do_setup_env() if HAVE_LOGIN_CAP is not defined
+  
 20060713
  - (dtucker) [auth-krb5.c auth-pam.c] Still more errno.h
 
