--- a/ChangeLog
+++ b/ChangeLog
@@ -131,6 +131,10 @@
    names)
  - (djm) [Makefile.in]
    Remove generated openbsd-compat/regress/Makefile in distclean target
+ - (djm) [regress/Makefile regress/agent-getpeereid.sh regress/cfgmatch.sh]
+   [regress/cipher-speed.sh regress/forcecommand.sh regress/forwarding.sh]
+   Sync regress tests to -current; include dtucker@'s new cfgmatch and 
+   forcecommand tests. Add cipher-speed.sh test (not linked in yet)
 
 20060713
  - (dtucker) [auth-krb5.c auth-pam.c] Still more errno.h
