--- a/ChangeLog
+++ b/ChangeLog
@@ -135,6 +135,8 @@
    [regress/cipher-speed.sh regress/forcecommand.sh regress/forwarding.sh]
    Sync regress tests to -current; include dtucker@'s new cfgmatch and 
    forcecommand tests. Add cipher-speed.sh test (not linked in yet)
+ - (dtucker) [cleanup.c] Since config.h defines _LARGE_FILES on AIX, including
+   system headers before defines.h will cause conflicting definitions.
 
 20060713
  - (dtucker) [auth-krb5.c auth-pam.c] Still more errno.h
