--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20060802
+ - (dtucker) [openbsd-compat/daemon.c] Add unistd.h for fork() prototype.
+
 20060725
  - (dtucker) [openbsd-compat/xmmap.c] Need fcntl.h for O_RDRW.
 
