--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20060804
+ - (dtucker) [configure.ac] The "crippled AES" test does not work on recent
+   versions of Solaris, so use AC_LINK_IFELSE to actually link the test program
+   rather than just compiling it.  Spotted by dlg@.
+
 20060802
  - (dtucker) [openbsd-compat/daemon.c] Add unistd.h for fork() prototype.
 
