- (djm) [auth-pam.c auth.c bufaux.h entropy.c openbsd-compat/port-tun.c]    remove last traces of bufaux.h - it was merged into buffer.h in the big    includes.h commit

--- a/ChangeLog
+++ b/ChangeLog
@@ -86,6 +86,9 @@
      [monitor.c session.c ssh-agent.c]
      spaces
  - (djm) [auth-pam.c defines.h] Move PAM related bits to auth-pam.c
+ - (djm) [auth-pam.c auth.c bufaux.h entropy.c openbsd-compat/port-tun.c]
+   remove last traces of bufaux.h - it was merged into buffer.h in the big
+   includes.h commit
 
 20060804
  - (dtucker) [configure.ac] The "crippled AES" test does not work on recent
