--- a/ChangeLog
+++ b/ChangeLog
@@ -93,6 +93,9 @@
  - (djm) [openbsd-compat/regress/snprintftest.c]
    [openbsd-compat/regress/strduptest.c] Add missing includes so they pass
    compilation with "-Wall -Werror"
+ - (djm) [auth-pam.c auth-shadow.c auth2-none.c cleanup.c sshd.c]
+   [openbsd-compat/port-tun.c openbsd-compat/port-tun.h] Sprinkle more
+   includes for Linux in
 
 20060804
  - (dtucker) [configure.ac] The "crippled AES" test does not work on recent
