--- a/ChangeLog
+++ b/ChangeLog
@@ -96,6 +96,7 @@
  - (djm) [auth-pam.c auth-shadow.c auth2-none.c cleanup.c sshd.c]
    [openbsd-compat/port-tun.c openbsd-compat/port-tun.h] Sprinkle more
    includes for Linux in
+ - (dtucker) [cleanup.c] Need defines.h for __dead.
 
 20060804
  - (dtucker) [configure.ac] The "crippled AES" test does not work on recent
