--- a/ChangeLog
+++ b/ChangeLog
@@ -97,6 +97,7 @@
    [openbsd-compat/port-tun.c openbsd-compat/port-tun.h] Sprinkle more
    includes for Linux in
  - (dtucker) [cleanup.c] Need defines.h for __dead.
+ - (dtucker) [auth2-gss.c] We still need the #ifdef GSSAPI in -portable.
 
 20060804
  - (dtucker) [configure.ac] The "crippled AES" test does not work on recent
