--- a/ChangeLog
+++ b/ChangeLog
@@ -100,6 +100,7 @@
  - (dtucker) [auth2-gss.c] We still need the #ifdef GSSAPI in -portable.
  - (dtucker) [openbsd-compat/{bsd-arc4random.c,port-tun.c,xmmap.c}] Lots of
    #include stdarg.h, needed for log.h.
+ - (dtucker) [entropy.c] Needs unistd.h too.
 
 20060804
  - (dtucker) [configure.ac] The "crippled AES" test does not work on recent
