- (dtucker) [ssh-rand-helper.c] Needs stdarg.h for log.h.

--- a/ChangeLog
+++ b/ChangeLog
@@ -101,6 +101,7 @@
  - (dtucker) [openbsd-compat/{bsd-arc4random.c,port-tun.c,xmmap.c}] Lots of
    #include stdarg.h, needed for log.h.
  - (dtucker) [entropy.c] Needs unistd.h too.
+ - (dtucker) [ssh-rand-helper.c] Needs stdarg.h for log.h.
 
 20060804
  - (dtucker) [configure.ac] The "crippled AES" test does not work on recent
