--- a/ChangeLog
+++ b/ChangeLog
@@ -103,6 +103,8 @@
  - (dtucker) [entropy.c] Needs unistd.h too.
  - (dtucker) [ssh-rand-helper.c] Needs stdarg.h for log.h.
  - (dtucker) [openbsd-compat/getrrsetbyname.c] Nees stdlib.h for malloc.
+ - (dtucker) [openbsd-compat/strtonum.c] Include stdlib.h for strtoll,
+   otherwise it is implicitly declared as returning an int.
 
 20060804
  - (dtucker) [configure.ac] The "crippled AES" test does not work on recent
