--- a/ChangeLog
+++ b/ChangeLog
@@ -118,6 +118,8 @@
    - dtucker@cvs.openbsd.org 2006/08/05 08:34:04
      [packet.c]
      Typo in comment
+ - (dtucker) [openbsd-compat/bsd-cygwin_util.c] Add headers required to compile
+   on Cygwin.
 
 20060804
  - (dtucker) [configure.ac] The "crippled AES" test does not work on recent
