--- a/ChangeLog
+++ b/ChangeLog
@@ -120,6 +120,7 @@
      Typo in comment
  - (dtucker) [openbsd-compat/bsd-cygwin_util.c] Add headers required to compile
    on Cygwin.
+ - (dtucker) [openbsd-compat/fake-rfc2553.c] Add headers needed for inet_ntoa.
 
 20060804
  - (dtucker) [configure.ac] The "crippled AES" test does not work on recent
