--- a/ChangeLog
+++ b/ChangeLog
@@ -121,6 +121,7 @@
  - (dtucker) [openbsd-compat/bsd-cygwin_util.c] Add headers required to compile
    on Cygwin.
  - (dtucker) [openbsd-compat/fake-rfc2553.c] Add headers needed for inet_ntoa.
+ - (dtucker) [auth-skey.c] monitor_wrap.h needs ssh-gss.h.
 
 20060804
  - (dtucker) [configure.ac] The "crippled AES" test does not work on recent
