--- a/ChangeLog
+++ b/ChangeLog
@@ -122,6 +122,7 @@
    on Cygwin.
  - (dtucker) [openbsd-compat/fake-rfc2553.c] Add headers needed for inet_ntoa.
  - (dtucker) [auth-skey.c] monitor_wrap.h needs ssh-gss.h.
+ - (dtucker) [audit.c audit.h] Repair headers.
 
 20060804
  - (dtucker) [configure.ac] The "crippled AES" test does not work on recent
