--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006086
+ - (dtucker) [defines.h] With the includes.h changes we no longer get the
+   name clash on "YES" so we can remove the workaround for it.
+
 20060805
  - (djm) OpenBSD CVS Sync
    - stevesk@cvs.openbsd.org 2006/07/24 13:58:22
