--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 2006086
  - (dtucker) [defines.h] With the includes.h changes we no longer get the
    name clash on "YES" so we can remove the workaround for it.
+ - (dtucker) [openbsd-compat/{bsd-asprintf.c,bsd-openpty.c,bsd-snprintf.c,
+   glob.c}] Include stdlib.h for malloc and friends in compat code.
 
 20060805
  - (djm) OpenBSD CVS Sync
