--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20060817
  - (dtucker) [openbsd-compat/fake-rfc2553.c openbsd-compat/setproctitle.c]
    Include stdlib.h for malloc and friends.
+ - (dtucker) [configure.ac openbsd-compat/bsd-closefrom.c] Use F_CLOSEM fcntl
+   for closefrom() on AIX.  Pointed out by William Ahern.
 
 20060816
  - (djm) [audit-bsm.c] Sprinkle in some headers
