--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
    Include stdlib.h for malloc and friends.
  - (dtucker) [configure.ac openbsd-compat/bsd-closefrom.c] Use F_CLOSEM fcntl
    for closefrom() on AIX.  Pointed out by William Ahern.
+ - (dtucker) [openbsd-compat/regress/{Makefile.in,closefromtest.c}] Regress
+   test for closefrom() in compat code.
 
 20060816
  - (djm) [audit-bsm.c] Sprinkle in some headers
