--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 20060818
  - (dtucker) [configure.ac openbsd-compat/bsd-closefrom.c] Resync with
    closefrom.c from sudo.
+ - (dtucker) [openbsd-compat/bsd-closefrom.c] Comment out rcsid.
 
 20060817
  - (dtucker) [openbsd-compat/fake-rfc2553.c openbsd-compat/setproctitle.c]
