--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20060820
+ - (dtucker) [log.c] Move ifdef to prevent unused variable warning.
+
 20060819
  - (djm) OpenBSD CVS Sync
    - djm@cvs.openbsd.org 2006/08/18 22:41:29
