- (dtucker) [configure.ac] Remove errant "-".

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
    fixing bug #1181.  No changes yet.
  - (dtucker) [configure.ac] Bug #1181: Explicitly test to see if OpenSSL
    (0.9.8a and presumably newer) requires -ldl to successfully link.
+ - (dtucker) [configure.ac] Remove errant "-".
 
 20060819
  - (djm) OpenBSD CVS Sync
