--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20060822
+ - (dtucker) [Makefile.in] Bug #1177: fix incorrect path for sshrc in
+   Makefile.  Patch from santhi.amirta at gmail, ok djm.
+
 20060820
  - (dtucker) [log.c] Move ifdef to prevent unused variable warning.
  - (dtucker) [configure.ac] Save $LIBS during PAM library tests and restore
