--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20060824
+ - (dtucker) [openbsd-compat/basename.c] Include errno.h.
+
 20060822
  - (dtucker) [Makefile.in] Bug #1177: fix incorrect path for sshrc in
    Makefile.  Patch from santhi.amirta at gmail, ok djm.
