- (dtucker) [openbsd-compat/bsd-misc.c] Include <sys/select.h> for select(2)    on POSIX systems.

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
  - (dtucker) [openbsd-compat/basename.c] Include errno.h.
  - (dtucker) [openbsd-compat/bsd-misc.c] Add includes needed for select(2) on
    older systems.
+ - (dtucker) [openbsd-compat/bsd-misc.c] Include <sys/select.h> for select(2)
+   on POSIX systems.
 
 20060822
  - (dtucker) [Makefile.in] Bug #1177: fix incorrect path for sshrc in
