--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
    older systems.
  - (dtucker) [openbsd-compat/bsd-misc.c] Include <sys/select.h> for select(2)
    on POSIX systems.
+ - (dtucker) [openbsd-compat/bsd-openpty.c] Include for ioctl(2).
 
 20060822
  - (dtucker) [Makefile.in] Bug #1177: fix incorrect path for sshrc in
