--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
  - (dtucker) [openbsd-compat/bsd-misc.c] Include <sys/select.h> for select(2)
    on POSIX systems.
  - (dtucker) [openbsd-compat/bsd-openpty.c] Include for ioctl(2).
+ - (dtucker) [openbsd-compat/rresvport.c] Include <stdlib.h> for malloc.
 
 20060822
  - (dtucker) [Makefile.in] Bug #1177: fix incorrect path for sshrc in
