--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
    on POSIX systems.
  - (dtucker) [openbsd-compat/bsd-openpty.c] Include for ioctl(2).
  - (dtucker) [openbsd-compat/rresvport.c] Include <stdlib.h> for malloc.
+ - (dtucker) [openbsd-compat/xmmap.c] Move #define HAVE_MMAP to prevent
+   unused variable warning when we have a broken or missing mmap(2).
 
 20060822
  - (dtucker) [Makefile.in] Bug #1177: fix incorrect path for sshrc in
