--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
    [openbsd-compat/port-solaris.h] Add support for Solaris process
    contracts, enabled with --use-solaris-contracts. Patch from Chad
    Mynhier, tweaked by dtucker@ and myself; ok dtucker@
+ - (dtucker) [contrib/cygwin/ssh-host-config] Add SeTcbPrivilege privilege
+   while setting up the ssh service account.  Patch from Corinna Vinschen.
 
 20060830
  - (djm) OpenBSD CVS Sync
