- (dtucker) [README contrib/{caldera,redhat,suse}/openssh.spec]  Crank    versions.

--- a/ChangeLog
+++ b/ChangeLog
@@ -24,6 +24,8 @@
    Stops sftp from segfaulting when attempting to get a nonexistent file on
    Cygwin (previous versions of OpenSSH didn't use the native glob). Partly
    from and tested by Corinna Vinschen.
+ - (dtucker) [README contrib/{caldera,redhat,suse}/openssh.spec]  Crank
+   versions.
 
 20060831
  - (djm) [CREDITS LICENCE Makefile.in auth.c configure.ac includes.h ]
