--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20060902
+ - (dtucker) [openbsd-compat/port-irix.c] Add errno.h, found by Iain Morgan.
+
 20060901
  - (djm) [audit-bsm.c audit.c auth-bsdauth.c auth-chall.c auth-pam.c]
    [auth-rsa.c auth-shadow.c auth-sia.c auth1.c auth2-chall.c]
