--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20060905
+ - (dtucker) [configure.ac] s/AC_DEFINES/AC_DEFINE/ spotted by Roumen Petrov.
+
 20060904
  - (dtucker) [configure.ac] Define BROKEN_UPDWTMP on SCO OSR6 as the native
    updwdtmp seems to generate invalid wtmp entries.  From Roger Cornelius,
