- (tim) [configure.ac] s/BROKEN_UPDWTMP/BROKEN_UPDWTMPX/ on SCO OSR6

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
    Magnus Abrante; suggestion and feedback dtucker@
    NB. this change will require that the privilege separation user must
    exist on all the time, not just when UsePrivilegeSeparation=yes
+ - (tim) [configure.ac] s/BROKEN_UPDWTMP/BROKEN_UPDWTMPX/ on SCO OSR6
 
 20060905
  - (dtucker) [configure.ac] s/AC_DEFINES/AC_DEFINE/ spotted by Roumen Petrov.
